# titan-sports-intelligence

./: .gitignore  .replit  docker-compose.yml  replit.md  vite.config.ts
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260715_0001_canonical_sports_domain.py  20260715_0002_fixture_ingestion_pipeline.py  README.md
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  health.py
backend/app/api/v1/: __init__.py  router.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py  middleware.py  observability.py  security.py
backend/app/modules/: __init__.py
backend/app/modules/audit/: __init__.py
backend/app/modules/configuration/: __init__.py
backend/app/modules/consensus/: __init__.py
backend/app/modules/data_quality/: __init__.py
backend/app/modules/evaluation/: __init__.py
backend/app/modules/experiment/: __init__.py
backend/app/modules/explainability/: __init__.py
backend/app/modules/feature_store/: __init__.py
backend/app/modules/governance/: __init__.py
backend/app/modules/identity/: __init__.py
backend/app/modules/ingestion/: README.md  __init__.py  (+8 more)
backend/app/shared/: __init__.py  redis.py
backend/app/tests/: __init__.py  test_config.py  test_database.py  test_fixture_ingestion_integration.py  test_health.py  test_ingestion_api.py  test_ingestion_models.py  test_ingestion_providers.py  test_ingestion_service.py  test_sports_api.py  test_sports_models.py  test_sports_schemas.py
backend/app/workers/: __init__.py
(+95 files in other folders)
